Use new toList() method